fix spacing bug for accept answer button (margin-left)

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2931,7 +2931,7 @@ a.podmedcis_button.green.accept_answer_button {
   -moz-border-radius-bottomleft: 5px 5px;
   border-bottom-left-radius: 5px 5px;
   line-height: 10px;
-  margin-left: 10px;
+  margin-left: 0px;
   margin-top: -10px;
 
 }
